--- a/appspec.yml
+++ b/appspec.yml
@@ -12,11 +12,15 @@ permissions:
      type:
        - file
 hooks:
+   ApplicationStop:
+    - location: scripts/deregister_from_elb.sh
    BeforeInstall:
     - location: scripts/installapache.sh
       runas: root
     - location: scripts/startapache.sh
       runas: root
    AfterInstall:
+    - location: scripts/register_with_elb.sh
+      runas: root
     - location: scripts/startapache.sh
       runas: root
