--- a/appspec.yml
+++ b/appspec.yml
@@ -18,5 +18,5 @@ hooks:
     - location: scripts/startapache.sh
       runas: root
    AfterInstall:
-    - location: scripts/startapache.sh
+    - location: scripts/restartapache.sh
       runas: root
